# null-realm

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.atlas  Dockerfile.mcp  Dockerfile.projector  Dockerfile.spotlight  Dockerfile.ui  Dockerfile.viz  Dockerfile.worker  README.md  RUNBOOK.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml  tasks.py
.claude/commands/: index-repo.md
.planning/: BRIEF.md  COSTS.md  ROADMAP.md
.planning/phases/01-foundation-observability/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-chat-ui-agent/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/phases/03-streaming-persistence/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-multi-agent-workflows/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-context-engineering/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-05-PLAN.md  05-06-PLAN.md
agent_configs/assistants/: code_reviewer.yaml  planner.yaml  poc_writer.yaml  research.yaml
agent_configs/prompts/: code_reviewer.md  planner.md  poc_writer.md  research_agent.md
agent_configs/tools/: bash.yaml  code_search.yaml  file_read.yaml  graph_query.yaml  grep.yaml  web_search.yaml
agent_configs/workflows/: feature_development.yaml
docs/: SESSION-2026-04-03.md  mcp-guide.md  mcp-local-config.md  open-questions.md  services.md
docs/architecture/: decisions.md  knowledge-graph.md  overview.md
docs/presentation/: slides.html
infra/prometheus/: prometheus.yaml
infra/pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  cloudbuild.py  cloudsql.py  gke.py  iam.py  networking.py  registry.py  secrets.py
nullrealm/: __init__.py  config.py  main.py  mcp_auth.py  mcp_server.py  mcp_tools.py
nullrealm/api/: schemas.py  websocket.py
nullrealm/communication/: events.py  nats_bus.py
nullrealm/context/: assembler.py  embeddings.py  indexer.py  neo4j_store.py  pgvector_store.py  repo_manager.py  repo_manager_cli.py  service_analyzer.py  summaries.py  viz_export.py
nullrealm/observability/: tracing.py
nullrealm/orchestrator/: argo_client.py  workflow_executor.py
nullrealm/registry/: database.py  models.py  schemas.py  seed.py
nullrealm/tools/: base.py
nullrealm/worker/: __init__.py  bootstrap.py  langgraph_agent.py  main.py
repo-indexes/null-realm/: REPO_INDEX.md
scripts/: kind-config.yaml
ui/: app.py
viz/: app.py
viz/tools/: atlas_entrypoint.sh  export_data.py  projector_entrypoint.sh  spotlight_entrypoint.sh  spotlight_server.py
(+73 files in other folders)
