[project]
name = "null-realm"
version = "0.1.0"
description = "Multi-agent learning lab on Kubernetes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.4.0",
    "litellm>=1.50.0",
    "chainlit>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "nats-py>=2.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "httpx>=0.28.0",
    "websockets>=16.0",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "traceloop-sdk>=0.57.0",
    "langfuse>=4.0.5",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
    "google-cloud-aiplatform>=1.144.0",
    "sentence-transformers>=5.3.0",
    "pgvector>=0.4.2",
    "neo4j>=6.1.0",
    "pacmap>=0.9.1",
    "plotly>=6.6.0",
    "streamlit>=1.56.0",
    "mcp>=1.26.0",
    "pyjwt>=2.12.1",
]

[project.optional-dependencies]
dev = [
    "invoke>=2.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nullrealm"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
